# picFun

./: #README.md#  .#README.md  .gitignore  LICENSE  README.md  client_session_key.aes  ffbench.hs  hap.yaml  picFun.cabal  picFun.cabal~  stack.yaml
.stack-work/install/x86_64-linux/lts-8.6/8.0.2/flag-cache/: blaze-0.0.2-L1VVM5REPzYEia3cvIGZ5t  picFun-0.1.0.0-41oGHt6VUNM2sRBPQhbfR4
.stack-work/install/x86_64-linux/lts-8.6/8.0.2/lib/x86_64-linux-ghc-8.0.2/picFun-0.1.0.0-41oGHt6VUNM2sRBPQhbfR4/: Api.dyn_hi  Api.hi  Htmls.dyn_hi  Htmls.hi  Lib.dyn_hi  Lib.hi  Models.dyn_hi  Models.hi  Pixels.hi
.stack-work/install/x86_64-linux/lts-8.6/8.0.2/pkgdb/: blaze-0.0.2-L1VVM5REPzYEia3cvIGZ5t.conf  package.cache  picFun-0.1.0.0-41oGHt6VUNM2sRBPQhbfR4.conf
app/: Main.hs
src/: Api.hs  Api.hs~  Automata.hs  Cmd.hs~  Grid.hs  Htmls.hs  Htmls.hs~  Lib.hs  Lib.hs~  Models.hs  Models.hs~  Pixels.hs  Pixels.hs~
static/: Action.hs  CanvasBS.hs  Foreign.hs  Grid.hs  Main.hs  Model.hs  Store.hs  View.hs  bower.json  canvas.js  index.html  loading.js  package-lock.json  picFunFE.cabal  stack.yaml
static/app.jsexe/: all.js  lib.js  out.js  out.stats
static/src/: Main.purs  SignalM.purs
