name:                picFun
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/lambdayak/picFun#readme
license:             BSD3
license-file:        LICENSE
author:              Robert Glorioso,
maintainer:          robert@aggdata.com,
copyright:           2016 Robert Glorioso,
category:            web,
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Api, Htmls, Models, Pixels, Grid
  build-depends:       JuicyPixels
                     , aeson >= 1.0.2.1
                     , base >= 4.7 && < 5
                     , blaze
                     , blaze-html
                     , blaze-markup
                     , bytestring
                     , comonad
                     , containers >= 0.5.7.1
                     , directory >= 1.2.6.2
                     , http-media >= 0.6.4
                     , microlens >= 0.4.8.0
                     , microlens-platform
                     , microlens-th >= 0.4.1.1
                     , monad-logger >= 0.3.20.1
                     , mtl >= 2.2.1
                     , servant >= 0.7
                     , servant-JuicyPixels
                     , servant-server
                     , stm >= 2.4.4.1
                     , text >= 1.2.2.1
                     , vector >= 0.11.0.0
                     , wai >= 3.2.1.1
                     , warp >= 3.2.9
  default-language:    Haskell2010

executable picFun-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       aeson >= 1.0.2.1
                     , base >= 4.7 && < 5
                     , blaze
                     , blaze-html
                     , blaze-markup
                     , bytestring
                     , comonad
                     , containers >= 0.5.7.1
                     , directory >= 1.2.6.2
                     , http-media >= 0.6.4
                     , microlens >= 0.4.8.0
                     , microlens-platform
                     , microlens-th >= 0.4.1.1
                     , monad-logger >= 0.3.20.1
                     , mtl >= 2.2.1
                     , picFun
                     , servant >= 0.7
                     , servant-JuicyPixels
                     , servant-server
                     , stm >= 2.4.4.1
                     , text >= 1.2.2.1
                     , vector >= 0.11.0.0
                     , wai >= 3.2.1.1
                     , warp >= 3.2.9
  default-language:    Haskell2010

test-suite picFun-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       aeson
                     , base
                     , containers >= 0.5.7.1
                     , microlens >= 0.4.8.0
                     , microlens-th >= 0.4.1.1
                     , picFun
                     , stm >= 2.4.4.1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lambdayak/picFun
